--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -367,7 +367,6 @@
     <string name="template_cancel_confirm_title">Aviso</string>
     <string name="template_cancel_confirm_text">O modelo vai ser apagado. Prosseguir?</string>
     <string name="gestures_already_present">Aviso: Um gesto similar está associado a outro modelo!</string>
-    <string name="pref_title_mms_notification_vibrate_settings">Preferências de vibração</string>
     <string name="pref_title_mms_notification_vibrate_pattern">Padrão de vibração</string>
     <string name="pref_summary_mms_notification_vibrate_pattern">Trocar o padrão de vibração</string>
     <string name="pref_title_mms_notification_vibrate_call">Vibrar quando Chamar</string>
@@ -401,10 +400,16 @@
     <string name="pref_dark_theme_title">Usar tema escuro</string>
     <string name="pref_dark_theme_summary">Se não estiver selecionado, será utilizado o tema \'claro\' padrão</string>
     <string name="pref_title_input_type">Tipo de teclado virtual</string>
-    <string name="pref_summary_input_type">Selecione o tipo de teclado virtual para ser usado ao compor mensagens</string>
     <string name="pref_keyboard_new_line">Enter para uma nova linha</string>
     <string name="menu_add_to_calendar">Adicionar ao calendário</string>
     <string name="pref_keyboard_emoji">Exibir a tecla de Emoticons</string>
     <string name="pref_keyboard_unknown">Desconhecido, favor reselecionar</string>
     <string name="qm_mark_read">Lida</string>
+    <string name="pref_title_notification_privacy_mode_enabled">Modo de privacidade</string>
+    <string name="pref_summary_notification_privacy_mode_enabled">Ocultar remetente e mensagem na barra de status e desativar resposta Rápida</string>
+    <string name="notification_single_title_privacy_mode">Nova mensagem</string>
+    <string name="notification_single_text_privacy_mode">1 mensagem não lida</string>
+    <string name="notification_multiple_title_privacy_mode">Novas mensagens</string>
+    <string name="notification_multiple_text_privacy_mode"><xliff:g id="number" example="3" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">%1$s</xliff:g> mensagens não lidas</string>
+    <string name="notification_ticker_privacy_mode">Nova mensagem recebida</string>
 </resources>
