--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -391,14 +391,6 @@
     <string name="template_cancel_confirm_title">Attenzione</string>
     <string name="template_cancel_confirm_text">Il modello verrà cancellato. Continuare?</string>
     <string name="gestures_already_present">Attenzione! Una gesture simile è associata ad un altro template</string>
-    <string name="pref_title_mms_notification_vibrate_settings">Impostazioni vibrazione</string>
-    <string name="pref_title_mms_notification_vibrate_pattern">Schema vibrazione</string>
-    <string name="pref_summary_mms_notification_vibrate_pattern">Cambia schema di vibrazione</string>
-    <string name="pref_title_mms_notification_vibrate_call">Vibrazione in chiamate</string>
-    <string name="pref_summary_mms_notification_vibrate_call">Permetti la vibrazione durante una chiamata</string>
-    <string name="pref_title_mms_notification_vibrate_custom">Schema personalizzato</string>
-    <string name="pref_text_mms_notification_vibrate_custom">Formatta off/on in millisecondi: off, on, off, on, ...</string>
-
     <string name="pref_title_templates_show_gesture">Gesture</string>
     <string name="pref_summary_templates_show_gesture">Mostra traccia della gesture</string>
     <string name="pref_title_template_gestures_sensitivity">Sensibilità gesture</string>
@@ -416,22 +408,6 @@
     <string name="pref_keyboard_emoji">Inserisce emoji</string>
     <string name="pref_keyboard_new_line">Va a capo</string>
     <string name="pref_keyboard_unknown">Sconosciuto, si prega di riselezionare</string>
-    <string name="pref_summary_input_type">Seleziona la funzione del tasto Invio durante la scrittura dei messaggi</string>
-    <string name="pref_quickmessage">Messaggi e risposte rapidi</string>
-    <string name="pref_quickmessage_title">Mostra messaggi rapidi</string>
-    <string name="pref_quickmessage_summary">Mostra il pop-up di messaggio rapido per gli sms in arrivo</string>
-    <string name="pref_wake_unlock_title">Accendi e sblocca</string>
-    <string name="pref_wake_unlock_summary">Accendi e sblocca il dispositivo all\'arrivo di un messaggio (solo con bloccaschermo senza sicurezza)</string>
-    <string name="pref_close_all_title">Chiudi tutto</string>
-    <string name="pref_close_all_summary">Il pulsante \'Chiudi\' chiude tutti i messaggi</string>
-    <string name="pref_dark_theme_title">Usa tema scuro</string>
-    <string name="pref_dark_theme_summary">Se non selezionato, verrà utilizzato il classico tema chiaro</string>
-    <string name="message_counter_separator">di</string>
-    <string name="button_close">Chiudi</string>
-    <string name="button_view">Visualizza</string>
-    <string name="button_templates">Modelli</string>
-    <string name="type_to_reply_text_enter_to_send">Digita per rispondere</string>
-    <string name="toast_sending_message">Invio messaggio</string>
-    <string name="qm_quick_reply">Rispondi</string>
-    <string name="qm_mark_read">Letto</string>
+    <string name="pref_title_sms_split_counter">Contatore SMS</string>
+    <string name="pref_summary_sms_split_counter">Indica quanti SMS compongono il messaggio</string>
 </resources>
